--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -26,7 +26,7 @@ jobs:
     - name: tag
       shell: bash
       run: |
-        if [[ ${{ matrix.cuda_version }} == '12'  ]]; then 
+        if [[ ${{ matrix.cuda_version }} == '12'  ]]; then
         echo "tag=oras://ghcr.io/${{ github.repository }}/openmm" >> $GITHUB_ENV
         elif [[ ${{ matrix.cuda_version }} == '11'  ]]; then
         echo "tag=oras://ghcr.io/${{ github.repository }}/openmm-cuda11" >> $GITHUB_ENV
@@ -54,7 +54,7 @@ jobs:
       run: |
         ls -l
         df -h . /tmp
-        apptainer build --nv --force --fakeroot /tmp/openmm.sif Singularity_${{ matrix.cuda_version }.def
+        apptainer build --nv --force --fakeroot /tmp/openmm.sif Singularity_${{ matrix.cuda_version }}.def
         ls -lrth /tmp/openmm.sif
     - name: builddate
       id: build-date
