CUDA_DRIVER_VERSION arg

--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -42,7 +42,7 @@ jobs:
       uses: actions/setup-python@v4
     - name: Install apptainer
       env:
-        APP_VER: 1.1.2
+        APP_VER: 1.2.0.rc.1
       run: |
         sudo apt-get install -y  libfuse2 libseccomp2 zlib1g uidmap squashfs-tools squashfuse fuse2fs fuse-overlayfs fakeroot
         wget -q  https://github.com/apptainer/apptainer/releases/download/v${APP_VER}/apptainer_${APP_VER}_amd64.deb 
