--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -55,7 +55,7 @@ jobs:
       run: |
         ls -l
         df -h . /tmp
-        apptainer build --build-arg CUDA_DRIVER_VERSION=530 --build-arg CUDA_VERSION={{ matrix.cuda_version }} --nv --force --fakeroot /tmp/openmm.sif Singularity_version.def
+        apptainer build --build-arg CUDA_DRIVER_VERSION=530 --build-arg CUDA_VERSION=${{ matrix.cuda_version }} --nv --force --fakeroot /tmp/openmm.sif Singularity_version.def
         ls -lrth /tmp/openmm.sif
     - name: builddate
       id: build-date
