--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -25,6 +25,19 @@ jobs:
             - 12.1.1
             - 12.2.0
     steps:
+    - name: pkg cleanup
+      shell: bash
+      run: |
+        dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n
+        sudo apt-get purge -y azure-cli || true
+        sudo apt-get purge -y google-cloud-cli azure-cli microsoft-edge-stable dotnet-sdk-7.0 dotnet-sdk-6.0 google-chrome-stable firefox
+        sudo apt-get purge -y temurin-17-jdk temurin-11-jdk hhvm temurin-8-jdk
+        sudo apt-get purge -y llvm-12-dev llvm-11-dev llvm-10-dev
+        sudo apt-get purge -y libgl1-mesa-dri
+        sudo apt-get -y clean
+        sudo apt-get autoremove -y 
+        dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n
+        df -h
     - name: tag
       shell: bash
       run: |
