--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -22,9 +22,9 @@ jobs:
           cuda_version:
             - 11.7.1
             - 11.8.0
+            - 12.0.1
             - 12.1.1
             - 12.2.0
-            - 12.2.2
     steps:
     - name: pkg cleanup
       shell: bash
@@ -59,7 +59,7 @@ jobs:
         APP_VER: 1.2.0.rc.1
         APP_FOLDER: 1.2.0-rc.1
       run: |
-        sudo apt-get install -y  libfuse2 libseccomp2 zlib1g zlib1g-dev uidmap squashfs-tools squashfuse fuse2fs fuse-overlayfs fakeroot
+        sudo apt-get install -y  libfuse2 libseccomp2 zlib1g uidmap squashfs-tools squashfuse fuse2fs fuse-overlayfs fakeroot
         wget   https://github.com/apptainer/apptainer/releases/download/v${APP_FOLDER}/apptainer_${APP_VER}_amd64.deb 
         sudo dpkg -i apptainer_${APP_VER}_amd64.deb
         rm apptainer_${APP_VER}_amd64.deb
