--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -33,8 +33,8 @@ jobs:
             - nvidia/cuda:{{ CUDA_VERSION }}-runtime-ubuntu22.04
           include:
             - bootstrap: ubuntu:22.04
-            - cuda_version: 0.0.0
-            - cuda_driver_version: 000
+              cuda_version: 0.0.0
+              cuda_driver_version: 000
     steps:
     - name: pkg cleanup
       shell: bash
