--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -79,7 +79,7 @@ jobs:
         df -h . /tmp
         myargs= \
         --build-arg CUDA_DRIVER_VERSION=${{ matrix.cuda_driver_version }} \
-        --build-arg CUDA_VERSION=${{ matrix.cuda_version }} \
+        --build-arg CUDA_VERSION=${{ matrix.cuda_version }} 
         if [ -n ${{ matrix.bootstrap }}" ]; then
         myargs+=--build-arg MY_BOOTSTRAP=${{ matrix.bootstrap }} ; fi
         echo myargs is $myargs
