--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -77,8 +77,7 @@ jobs:
       run: |
         ls -l
         df -h . /tmp
-        myargs= \
-        " --build-arg CUDA_DRIVER_VERSION=${{ matrix.cuda_driver_version }} \
+        myargs=" --build-arg CUDA_DRIVER_VERSION=${{ matrix.cuda_driver_version }} \
         --build-arg CUDA_VERSION=${{ matrix.cuda_version }} "
         if [ -n ${{ matrix.bootstrap }} ]; then
         myargs+=" --build-arg MY_BOOTSTRAP=${{ matrix.bootstrap }} "; fi
