--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -51,7 +51,7 @@ jobs:
       shell: bash
       run: |
         echo bootstrap is @ ${{ matrix.bootstrap }} @
-        if [ ${{ matrix.bootstrap }} == "" ]; then
+        if [ -z ${{ matrix.bootstrap }} ]; then
         echo "tag=oras://ghcr.io/${{ github.repository }}/openmm-cuda${{ matrix.cuda_version }}-driver${{ matrix.cuda_driver_version }}" >> $GITHUB_ENV
         else
         echo "tag=oras://ghcr.io/${{ github.repository }}/openmm-${{ matrix.bootstrap }}" >> $GITHUB_ENV
@@ -84,7 +84,7 @@ jobs:
         df -h . /tmp
         myargs=" --build-arg CUDA_DRIVER_VERSION=${{ matrix.cuda_driver_version }} \
         --build-arg CUDA_VERSION=${{ matrix.cuda_version }} "
-        if [ ${{ matrix.bootstrap }} != "" ]; then
+        if [ ! -z ${{ matrix.bootstrap }}  ]; then
         myargs+=" --build-arg MY_BOOTSTRAP=${{ matrix.bootstrap }} "; fi
         echo myargs is $myargs
         apptainer build  \
