--- a/.github/workflows/openmm_singularity_nvidia_mpi.yml
+++ b/.github/workflows/openmm_singularity_nvidia_mpi.yml
@@ -25,6 +25,15 @@ jobs:
             - 12.1.1
             - 12.2.0
             - 12.3.2
+            - 12.4.1
+          cuda_driver_version:
+            - 530
+            - 545
+            - 550
+          include:
+            - bootstrap: ubuntu:22.04
+              cuda_version: 0.0.0
+              cuda_driver_version: 000
     steps:
     - name: pkg cleanup
       run: |
@@ -52,7 +61,11 @@ jobs:
     - name: tag
       shell: bash
       run: |
-        echo "tag=oras://ghcr.io/${{ github.repository }}/openmm-cuda${{ matrix.cuda_version }}-mpi" >> $GITHUB_ENV
+        if [ -z ${{ matrix.bootstrap }} ]; then
+        echo "tag=oras://ghcr.io/${{ github.repository }}/openmm-cuda${{ matrix.cuda_version }}-driver${{ matrix.cuda_driver_version }}-mpi" >> $GITHUB_ENV
+        else
+        echo "tag=oras://ghcr.io/${{ github.repository }}/openmm-$(echo ${{ matrix.bootstrap }}|sed -e s/:/_/)-mpi" >> $GITHUB_ENV
+        fi
     - name: echo-tag
       run: |
         echo ' the apptainer tag is ' ${{ env.tag }}
@@ -78,9 +91,14 @@ jobs:
     - name: build an apptainer container
       run: |
         cd mpi
-        ls -l
-        df -h . /tmp
-        apptainer build --build-arg CUDA_DRIVER_VERSION=530 --build-arg CUDA_VERSION=${{ matrix.cuda_version }} --nv --force --fakeroot /tmp/openmm.sif Singularity_version.def
+        myargs=" --build-arg CUDA_DRIVER_VERSION=${{ matrix.cuda_driver_version }} \
+        --build-arg CUDA_VERSION=${{ matrix.cuda_version }} "
+        if [ ! -z ${{ matrix.bootstrap }}  ]; then
+        myargs+=" --build-arg MY_BOOTSTRAP=${{ matrix.bootstrap }} "; fi
+        echo myargs is $myargs
+        apptainer build  \
+        $myargs \
+        --nv --force --fakeroot /tmp/openmm.sif Singularity_version.def
         ls -lrth /tmp/openmm.sif
     - name: builddate
       id: build-date
