--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -26,9 +26,12 @@ jobs:
             - 12.1.1
             - 12.2.0
           cuda_driver_version:
-            - 530
             - 545
           include:
+            - cuda_version: 12.5.1
+              cuda_driver_version: 560
+            - cuda_version: 11.2.1
+              cuda_driver_version: 560
             - cuda_version: 12.3.2
               cuda_driver_version: 545
             - cuda_version: 12.3.2
