--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -19,6 +19,8 @@ jobs:
     strategy:
         fail-fast: false
         matrix:
+          ubuntu_version:
+            - 22.04
           cuda_version:
             - 11.7.1
             - 11.8.0
@@ -30,19 +32,26 @@ jobs:
           include:
             - cuda_version: 12.5.1
               cuda_driver_version: 560
+              ubuntu_version: 22.04
             - cuda_version: 11.2.2
               cuda_driver_version: 560
+              ubuntu_version: 20.04
             - cuda_version: 12.3.2
               cuda_driver_version: 545
+              ubuntu_version: 22.04
             - cuda_version: 12.3.2
               cuda_driver_version: 550
+              ubuntu_version: 22.04
             - cuda_version: 12.4.1
               cuda_driver_version: 545
+              ubuntu_version: 22.04
             - cuda_version: 12.4.1
               cuda_driver_version: 550
+              ubuntu_version: 22.04
             - bootstrap: ubuntu:22.04
               cuda_version: 0.0.0
               cuda_driver_version: 000
+              ubuntu_version: 22.04
     steps:
     - name: pkg cleanup
       shell: bash
