--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -61,9 +61,12 @@ jobs:
       run: |
         ubuntu_ver=$(cat /etc/os-release | grep VERSION_ID |cut -d \" -f 2)
         dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n
-        sudo apt-get purge -y azure-cli || true
-        sudo apt-get purge -y google-cloud-cli microsoft-edge-stable dotnet-sdk-7.0 dotnet-sdk-6.0 google-chrome-stable firefox
-        sudo apt-get purge -y temurin-17-jdk temurin-11-jdk temurin-8-jdk
+        sudo apt-get purge -y azure-cli google-cloud-cli || true
+        sudo apt-get purge -y mysql-server-core-8.0 mysql-client-core-8.0 ||true
+        sudo apt-get purge -y microsoft-edge-stable google-chrome-stable firefox 
+        sudo apt-get purge -y dotnet-sdk-7.0 dotnet-sdk-6.0 dotnet-sdk-8.0 dotnet-targeting-pack-8.0
+        sudo apt-get purge -y mongodb-mongosh mongodb-org-server mongodb-org-mongos mono-devel
+        sudo apt-get purge -y temurin-17-jdk temurin-11-jdk temurin-8-jdk temurin-21-jdk
         if [[ $ubuntu_ver == "20.04" ]]; then
         sudo apt-get purge -y llvm-12-dev llvm-11-dev llvm-10-dev
         sudo apt-get purge -y hhvm
