--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -30,10 +30,13 @@ jobs:
           cuda_driver_version:
             - 545
           include:
-            - cuda_version: 12.6.2
+            - cuda_version: 12.8.0
               cuda_driver_version: 565
               ubuntu_version: 22.04
-            - cuda_version: 12.6.2
+            - cuda_version: 12.6.3
+              cuda_driver_version: 565
+              ubuntu_version: 22.04
+            - cuda_version: 12.6.3
               cuda_driver_version: 560
               ubuntu_version: 22.04
             - cuda_version: 12.5.1
