--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -83,13 +83,13 @@ jobs:
         python-version: '3.10'
     - name: Install apptainer
       env:
-        APP_VER: 1.2.5
-        APP_FOLDER: 1.2.5
+        APP_VER: 1.3.4
       run: |
         sudo apt-get install -y  libfuse2 libseccomp2 zlib1g uidmap squashfs-tools squashfuse fuse2fs fuse-overlayfs fakeroot
-        wget   https://github.com/apptainer/apptainer/releases/download/v${APP_FOLDER}/apptainer_${APP_VER}_amd64.deb 
-        sudo dpkg -i apptainer_${APP_VER}_amd64.deb
-        rm apptainer_${APP_VER}_amd64.deb
+        wget -q  https://github.com/apptainer/apptainer/releases/download/v${APP_VER}/apptainer_${APP_VER}_amd64.deb 
+        wget -q https://github.com/apptainer/apptainer/releases/download/v${APP_VER}/apptainer-suid_${APP_VER}_amd64.deb 
+        sudo dpkg -i apptainer*.deb
+        rm apptainer*.deb
         which apptainer
         apptainer version
     - name: build an apptainer container
