--- a/.github/workflows/openmm_singularity_nvidia12.yml
+++ b/.github/workflows/openmm_singularity_nvidia12.yml
@@ -22,35 +22,24 @@ jobs:
           include:
             - cuda_version: 12.8.0
               cuda_driver_version: 565
-              ubuntu_version: 22.04
             - cuda_version: 12.6.3
               cuda_driver_version: 565
-              ubuntu_version: 22.04
             - cuda_version: 12.6.3
               cuda_driver_version: 560
-              ubuntu_version: 22.04
             - cuda_version: 12.5.1
               cuda_driver_version: 560
-              ubuntu_version: 22.04
             - cuda_version: 11.2.2
               cuda_driver_version: 560
-              ubuntu_version: 20.04
             - cuda_version: 12.3.2
               cuda_driver_version: 545
-              ubuntu_version: 22.04
             - cuda_version: 12.3.2
               cuda_driver_version: 550
-              ubuntu_version: 22.04
             - cuda_version: 12.4.1
               cuda_driver_version: 545
-              ubuntu_version: 22.04
             - cuda_version: 12.4.1
               cuda_driver_version: 550
-              ubuntu_version: 22.04
-            - bootstrap: ubuntu:22.04
-              cuda_version: 0.0.0
+            - cuda_version: 0.0.0
               cuda_driver_version: 000
-              ubuntu_version: 22.04
     steps:
     - name: pkg cleanup
       uses: edoapra/ubuntu-pkg-cleanup@main
@@ -61,14 +50,17 @@ jobs:
         sudo mkdir /mnt/tmpdir
         sudo chmod -R uog+rwx /mnt/tmpdir
         echo 'this is a test' > /mnt/tmpdir/test.txt
+    - name: bootstrap
+      shell: bash
+      run: |
+        echo "bootstrap=ubuntu:22.04" >> $GITHUB_ENV
     - name: tag
       shell: bash
       run: |
-        echo bootstrap is @ ${{ matrix.bootstrap }} @
-        if [ -z ${{ matrix.bootstrap }} ]; then
-        echo "tag=oras://ghcr.io/${{ github.repository }}/openmm-cuda${{ matrix.cuda_version }}-driver${{ matrix.cuda_driver_version }}" >> $GITHUB_ENV
+        if [ ${{ matrix.cuda_version }} == "0.0.0" ]; then
+        echo "tag=oras://ghcr.io/${{ github.repository }}/openmm-$(echo ${{ env.bootstrap }}|sed -e s/:/_/)" >> $GITHUB_ENV
         else
-        echo "tag=oras://ghcr.io/${{ github.repository }}/openmm-$(echo ${{ matrix.bootstrap }}|sed -e s/:/_/)" >> $GITHUB_ENV
+        echo "tag=oras://ghcr.io/${{ github.repository }}/openmm-cuda${{ matrix.cuda_version }}-driver${{ matrix.cuda_driver_version }}" >> $GITHUB_ENV
         fi
     - name: echo-tag
       run: |
@@ -99,8 +91,7 @@ jobs:
         myargs=" --build-arg CUDA_DRIVER_VERSION=${{ matrix.cuda_driver_version }} \
         --build-arg UBUNTU_VERSION=${{ matrix.ubuntu_version }}  \
         --build-arg CUDA_VERSION=${{ matrix.cuda_version }} "
-        if [ ! -z ${{ matrix.bootstrap }}  ]; then
-        myargs+=" --build-arg MY_BOOTSTRAP=${{ matrix.bootstrap }} "; fi
+        myargs+=" --build-arg MY_BOOTSTRAP=${{ env.bootstrap }} "
         echo myargs is $myargs
         apptainer build  \
         $myargs \
